k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-status
  namespace: ingress
  labels:
    app: orders-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-status
  template:
    metadata:
      labels:
        app: orders-status
    spec:
      containers:
      - name: orders-status
        image: acrproep01.azurecr.io/orders-status:v1.5
        ports:
        - containerPort: 3333
          name: socket
        - containerPort: 50051
          name: grpc
