k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: orders-status-service
 namespace: ingress
spec:
 type: LoadBalancer
 selector:
    app: orders-status
 ports:
   - name: socket
     protocol: TCP
     port: 3333
     targetPort: 3333
   - name: grpc
     protocol: TCP
     port: 50051
     targetPort: 50051
