k8s/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-status-grpc-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  rules:
    - http:
        paths:
         -  path: /api/v1/orders-status-grpc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-status-service
                port:
                  number: 50051
