k8s/ingress-socket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-status-socket-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.org/websocket-services: orders-status-service
    nginx.ingress.kubernetes.io/websocket-services: orders-status-service
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
spec:
  rules:
    - http:
        paths:
         -  path: /api/v1/orders-status-socket(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-status-service
                port:
                  number: 3333
